@@ -100,29 +100,6 @@ static void __cdecl pre_cpp_init (void);
 _CRTALLOC(".CRT$XIAA") _PIFV mingw_pcinit = pre_c_init;
 _CRTALLOC(".CRT$XCAA") _PVFV mingw_pcppinit = pre_cpp_init;
 
-#ifndef _WIN64
-typedef PVOID (*fAddVectoredExceptionHandler)(ULONG,PVECTORED_EXCEPTION_HANDLER);
-
-static PVOID
-__mingw_AddVectoredExceptionHandler (ULONG First, PVECTORED_EXCEPTION_HANDLER Handler)
-{
- fAddVectoredExceptionHandler fnAddVectoredExceptionHandler = NULL;
- HMODULE hKern = LoadLibraryA ("KERNEL32.dll");
- PVOID ret = NULL;
- if (hKern)
-   {
-     fnAddVectoredExceptionHandler = (fAddVectoredExceptionHandler) GetProcAddress (hKern,
-	"AddVectoredExceptionHandler");
-   }
-
- if (fnAddVectoredExceptionHandler)
-   ret = (*fnAddVectoredExceptionHandler)(First,Handler);
- if (hKern)
-   FreeLibrary (hKern);
- return ret;
-}
-#endif
-
 static int __cdecl
 pre_c_init (void)
 {
@@ -240,18 +217,9 @@ __tmainCRTStartup (void)
 	"xorq %rax,%rax\n\t"
 	"decq %rax\n\t"
 	"movq %rax,%gs:0" "\n");
-    #else
-    __asm__ __volatile__ (
-	"xorl %eax,%eax\n\t"
-	"decl %eax\n\t"
-	"movl %eax,%fs:0" "\n");
-    #endif
-#ifndef _WIN64
-    __mingw_AddVectoredExceptionHandler
-#else
     AddVectoredExceptionHandler
-#endif
 	 (0, (PVECTORED_EXCEPTION_HANDLER)__mingw_vex);
+    #endif
     SetUnhandledExceptionFilter (_gnu_exception_handler);
     
     _fpreset ();
