@@ -128,7 +128,7 @@ static int WINAPI FLoadedAtPreferredAddress(PIMAGE_NT_HEADERS pinh,HMODULE hmod)
 #if(defined(_X86_) && !defined(__x86_64))
 #undef InterlockedExchangePointer
 #define InterlockedExchangePointer(Target,Value) (PVOID)(LONG_PTR)InterlockedExchange((PLONG)(Target),(LONG)(LONG_PTR)(Value))
-typedef unsigned long *PULONG_PTR;
+/*typedef unsigned long *PULONG_PTR;*/
 #endif
 
 FARPROC WINAPI __delayLoadHelper2(PCImgDelayDescr pidd,FARPROC *ppfnIATEntry)
